tests/ui/parser/removed-syntax-ptr-lifetime.stderr
error: expected one of `!`, `(`, `::`, `;`, `<`, or `where`, found `/`
  --> $DIR/removed-syntax-ptr-lifetime.rs:1:22
   |
LL | type bptr = &lifetime/isize;
   |                      ^ expected one of `!`, `(`, `::`, `;`, `<`, or `where`

error: aborting due to 1 previous error

