tests/ui/parser/removed-syntax-ptr-lifetime.rs
type bptr = &lifetime/isize; //~ ERROR expected one of `!`, `(`, `::`, `;`, `<`, or `where`, found `/`
